--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
                 text-align: center;
             }
         </style>
-        <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
         <script type="text/javascript">
             function login_function() {
                 $.ajax({
