--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         </style>
         <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
         <script type="text/javascript">
+            var cnt=2;
             function login_function() {
                 $.ajax({
                     type: "POST",
@@ -21,9 +22,27 @@
                     dataType:"text",
                     success:function(data) {
                         if (data=="登录成功") {
+                            // if (cnt<0) {
+                            //     document.cookie="name=" + document.getElementById("name").value;
+                            //     window.location.href='./chat room.html';
+                            // }
+                            // else {
+                            //     var div = document.createElement("div");
+                            //     div.className = '';
+                            //     var element=document.getElementById("judge");
+                            //     element.innerHTML = "";
+                            //     div.innerHTML = "登录成功，2秒后将进入聊天室";
+                            //     element.appendChild(div);
+                            // cnt--;
+                            // }
                             document.cookie="name=" + document.getElementById("name").value;
-                            alert("登录成功，将进入聊天室");
-                            window.location.href='./chat room.html';
+                            var div = document.createElement("div");
+                            div.className = '';
+                            var element=document.getElementById("judge");
+                            element.innerHTML = "";
+                            div.innerHTML = "登录成功，1秒后进入聊天室";
+                            element.appendChild(div);
+                            setTimeout("location.href='./chat room.html'",1000);
                         }
                         else {
                             var div = document.createElement("div");
@@ -38,6 +57,7 @@
                         alert("error"+jqXHR.status);
                     },
                 });
+                // setTimeout("login_function()",1000);
             }
         </script>
     </head>
