--- a/chat room.html
+++ b/chat room.html
@@ -7,7 +7,7 @@
 
     </head>
     <body>
-        <h1 class="room_p">在这里尽情地聊天吧</h1>
+        <h1 class="room_p">欢迎来到晴空聊天室</h1>
         <div id="room" class="room_class"></div>
         <div class="room2">
             <input type="text" id="input" class="input_class">
