--- a/register.html
+++ b/register.html
@@ -10,41 +10,58 @@
         </style>
         <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
         <script type="text/javascript">
+            // $("")
             function register_function() {
-                $.ajax({
-                    type: "POST",
-                    url: "registerphp.php",
-                    data: {
-                        name: $("#name").val(),
-                        psw: $("#psw").val(),
-                        psw_confirm: $("#psw_confirm").val(),
-                    },
-                    dataType:"text",
-                    success:function(data) {
-                        if (data=="注册成功") {
-                            document.cookie="name=" + document.getElementById("name").value;
+                if ($("#psw_confirm").val()!=$("#psw").val()) {
+                    var div = document.createElement("div");
+                    div.className = '';
+                    var element=document.getElementById("judge");
+                    element.innerHTML = "";
+                    div.innerHTML = "两次输入密码不一致";
+                    element.appendChild(div);
+                }
+                else {
+                    $.ajax({
+                        type: "POST",
+                        url: "registerphp.php",
+                        data: {
+                            name: $("#name").val(),
+                            psw: $("#psw").val(),
+                            psw_confirm: $("#psw_confirm").val(),
+                        },
+                        dataType:"json",
+                        success:function(data) {
+                            if (data=="注册成功") {
+                                document.cookie="name=" + document.getElementById("name").value;
+                                var div = document.createElement("div");
+                                div.className = '';
+                                var element=document.getElementById("judge");
+                                element.innerHTML = "";
+                                div.innerHTML = "注册成功，1秒后将以当前账号进入聊天室";
+                                element.appendChild(div);
+                                setTimeout("location.href='./chat room.html'",1000);
+                                // window.location.href='./login.html';
+                            }
+                            else {
+                                var div = document.createElement("div");
+                                div.className = '';
+                                var element=document.getElementById("judge");
+                                element.innerHTML = "";
+                                div.innerHTML = data;
+                                element.appendChild(div);
+                            }
+                        },
+                        error:function(jqXHR){
                             var div = document.createElement("div");
                             div.className = '';
                             var element=document.getElementById("judge");
                             element.innerHTML = "";
-                            div.innerHTML = "注册成功，2秒后将以当前账号进入聊天室";
+                            // div.innerHTML = jqXHR.status;
+                            div.innerHTML = jqXHR.responseJSON;
                             element.appendChild(div);
-                            setTimeout("location.href='./chat room.html'",2000);
-                            // window.location.href='./login.html';
-                        }
-                        else {
-                            var div = document.createElement("div");
-                            div.className = '';
-                            var element=document.getElementById("judge");
-                            element.innerHTML = "";
-                            div.innerHTML = data;
-                            element.appendChild(div);
-                        }
-                    },
-                    error:function(jqXHR){
-                        alert("error"+jqXHR.status);
-                    },
-                });
+                        },
+                    });
+                }
             }
         </script>
     </head>
