--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     },
                     dataType:"json",
                     success:function(data) {
-                        if (data=="登录成功") {
+                        if (data==="登陆成功") {
                             // if (cnt<0) {
                             //     document.cookie="name=" + document.getElementById("name").value;
                             //     window.location.href='./chat room.html';
