wo jue de gai wan le

--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                         var element=document.getElementById("judge");
                         element.innerHTML = "";
                         // div.innerHTML = jqXHR.status;
-                        div.innerHTML = jqXHR.responseJSON+"1";
+                        div.innerHTML = jqXHR.responseJSON;
                         element.appendChild(div);
                     },
                 });
